Remove Travis and make build runnable in JDK 17 (#237)
Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>